Correct h1 display, ajust alignment of sections

--- a/css/style.css
+++ b/css/style.css
@@ -1,67 +1,80 @@
-body{
+body {
 	background-color: #FAFAFA;
 	font-family: Georgia;
 }
-.container{
+
+.container {
 	background-color: #FAFAFA;
 	padding: 0px 75px 0px 75px;
 	text-align: center;
-
 }
-table{
+
+h1 {
+	background-color: #FAFAFA;
+	font-size: 60px;
+	text-align: center;
+	color: #6E6E6E; 
+	padding-bottom: 0px;
+	padding-top: 20px;
+	margin-bottom: 3px;
+}
+
+table {
 	width: 90%;
 	margin-left: 5%;
 	margin-right: 5%;
 }
 
-h1{
-	text-align: center;
-	font-size: 60px;
-	color: #6E6E6E; 
-	padding-bottom: 0px;
-	padding-top: 20px;
-}
-.bigPic{
+.bigPic {
 	float: left;
 	max-height: 320px;
 	max-width: 270px;
 	margin-right: 15px;
 }
+
 .bigPic img {
     width: 100%;
     height: auto;
     margin-top: -100px;
 }
-.meetKati{
-	padding: 0px 200px 250px 0px;
+
+.meetKati {
+	padding: 10px 200px 100px 0px;
 	text-align: left;
 }
-.meetKati strong{
+
+.meetKati strong {
 	text-align: left;
 	font-size: 20px;
+	padding-top: 100px;
 }
-h2{
+
+h2 {
 	text-align: center;
 }
-.section{
+
+.section {
 	padding-bottom: 50px;
 }
-.navi{
+
+table {
+	padding-bottom: 10px;
+}
+em {
+	color: #6E6E6E;
+}
+
+.navi {
 	/*border-bottom: solid #6E6E6E 3px;*/
 	padding-bottom: 40px;
-	padding-top: 100px;
+	padding-top: 50px;
 	text-align: center;
 }
-/*Align Interests to display in the center third */
-div.subnav {
-    margin-right: 20px;
-    display: 33%;
-}
-/* Create space above and below interest table */
 
 a {
 	padding-bottom: 50px;
 }
+
 a:link, a:visited { 
 	color: #BDBDBD;
 	font-size: 2.5rem; 
